<resources>
    <string name="app_name" translatable="false">Crypto Master</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Crypto Master</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>

    <string name="menu_home">Visão Geral</string>
    <string name="menu_BTC">Bitcoin</string>
    <string name="menu_ETH">Ethereum</string>
    <string name="menu_LTC">Litecoin</string>
    <string name="menu_BHC">Bitcoin Cash</string>

    <string name="home_second">Home Second</string>
    <string name="total_investido">Total Investido</string>
    <string name="ativos">Ativo</string>
    <string name="valor_investido_em_r">VALOR INVESTIDO EM R$</string>
    <string name="quantidade_da_moeda">QUANTIDADE DA MOEDA</string>
    <string name="data">DATA</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="valoriza_o">VALORIZAÇÃO</string>
    <string name="excluir">Excluir</string>
    <string name="litecoin">LITECOIN</string>
    <string name="ethereum">ETHEREUM</string>
    <string name="bcash">BCASH</string>
    <string name="bitcoin">BITCOIN</string>
</resources>