<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_bhc"
        android:name="com.example.criptomoedas.ui.bcash.BcashFragment"
        android:label="@string/menu_BHC"
        tools:layout="@layout/fragment_bcash" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.criptomoedas.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_btc"
        android:name="com.example.criptomoedas.ui.bitcoin.BitcoinFragment"
        android:label="@string/menu_BTC"
        tools:layout="@layout/fragment_bitcoin" />

    <fragment
        android:id="@+id/nav_ltc"
        android:name="com.example.criptomoedas.ui.litecoin.LitecoinFragment"
        android:label="@string/menu_LTC"
        tools:layout="@layout/fragment_litecoin" />
    <fragment
        android:id="@+id/nav_eth"
        android:name="com.example.criptomoedas.ui.etherium.EtheriumFragment"
        android:label="@string/menu_ETH"
        tools:layout="@layout/fragment_etherium" />
</navigation>